@@ -8,6 +8,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
 import java.net.InetSocketAddress;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -20,22 +21,22 @@ import java.util.stream.Stream;
 
 class S3MockService {
 
-    private HttpServer mockServer;
-    private String mockServiceAddress;
+    private final HttpServer mockServer;
+    private final String mockServiceAddress;
 
     S3MockService(URL serviceAddress, Path serviceRootPath) throws IOException {
         this.mockServer = HttpServer.create(new InetSocketAddress(serviceAddress.getPort()), 0);
         int port = this.mockServer.getAddress().getPort();
-        this.mockServiceAddress = serviceAddress.toString().replaceAll(":([\\d]+)", ":" + port);
+        this.mockServiceAddress = serviceAddress.toString().replaceAll(":(\\d+)", ":" + port);
         this.mockServer.createContext(serviceAddress.getPath(), new S3MockServiceHandler(serviceRootPath));
     }
 
     public static void main(String[] args) {
         try {
-            S3MockService mockService = new S3MockService(new URL("http://localhost:0/mock-api/"), Paths.get(System.getProperty("s3.mock-service.root")));
+            S3MockService mockService = new S3MockService(new URI("http://localhost:0/mock-api/").toURL(), Paths.get(System.getProperty("s3.mock-service.root")));
             mockService.start();
             Logger.getLogger(S3MockService.class.getName()).info("S3 mock service started at: " + mockService.getMockServiceAddress());
-        } catch (IOException e) {
+        } catch (Exception e) {
             Logger.getLogger(S3MockService.class.getName()).severe("Unable to start S3 mock service.\nReason: " + e.getMessage());
         }
     }
@@ -52,7 +53,7 @@ class S3MockService {
         return this.mockServiceAddress;
     }
 
-    private class S3MockServiceHandler implements HttpHandler {
+    private static class S3MockServiceHandler implements HttpHandler {
 
         private static final String PREFIX_CONTENT = "%prefix_content%";
         private static final String MARKER_CONTENT = "%marker_content%";
@@ -63,13 +64,13 @@ class S3MockService {
         private static final String FILE_PATH = "%file_path%";
         private static final String FILE_SIZE = "%file_size%";
         private static final String FILE_DATE = "%file_date%";
-        private static final String RESPONSE_XML = "<ListBucketResult xmlns=\"http://s3.amazonaws.com/doc/2006-03-01/\">\n<Name>mock-bucket</Name>\n<Prefix>" + PREFIX_CONTENT + "</Prefix>\n<Marker>" + MARKER_CONTENT + "</Marker>\n<MaxKeys>" + MAX_KEYS_CONTENT + "</MaxKeys>\n<Delimiter>/</Delimiter>\n<IsTruncated>" + IS_TRUNCATED_CONTENT + "</IsTruncated>\n" + BUCKET_CONTENT + "</ListBucketResult>";
+        private static final String RESPONSE_XML = "<ListBucketResult xmlns=\"https://s3.amazonaws.com/doc/2006-03-01/\">\n<Name>mock-bucket</Name>\n<Prefix>" + PREFIX_CONTENT + "</Prefix>\n<Marker>" + MARKER_CONTENT + "</Marker>\n<MaxKeys>" + MAX_KEYS_CONTENT + "</MaxKeys>\n<Delimiter>/</Delimiter>\n<IsTruncated>" + IS_TRUNCATED_CONTENT + "</IsTruncated>\n" + BUCKET_CONTENT + "</ListBucketResult>";
         private static final String DIRECTORY_XML = "<CommonPrefixes>\n<Prefix>" + DIRECTORY_PATH + "\n</Prefix>\n</CommonPrefixes>\n";
         private static final String FILE_XML = "<Contents>\n<Key>" + FILE_PATH + "</Key>\n<LastModified>" + FILE_DATE + "</LastModified>\n<ETag>00000000000000000000000000000000</ETag>\n<Size>" + FILE_SIZE + "</Size>\n<StorageClass>STANDARD</StorageClass>\n</Contents>\n";
 
         private final SimpleDateFormat isoDateFormat = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss'.'SSS'Z'");
 
-        private Path serviceRootPath;
+        private final Path serviceRootPath;
 
         S3MockServiceHandler(Path serviceRootPath) {
             this.serviceRootPath = serviceRootPath;
@@ -171,13 +172,14 @@ class S3MockService {
                         Path markerPath = bucketPath.resolve(markerParameterValue);
                         markerReached = pathItem.endsWith(markerPath);
                     } else {
+                        final String pathItemRelativePath = pathItem.toString().replace(bucketPath.toString(), "");
                         if (Files.isDirectory(pathItem)) {
-                            String directoryPath = pathItem.toString().replace(bucketPath.toString(), "").replace(bucketPath.getFileSystem().getSeparator(), "/").replaceAll("^/", "");
+                            String directoryPath = pathItemRelativePath.replace(bucketPath.getFileSystem().getSeparator(), "/").replaceAll("^/", "");
                             xml.append(DIRECTORY_XML.replaceAll(DIRECTORY_PATH, directoryPath + "/"));
                         } else {
                             long fileSize = Files.size(pathItem);
                             String fileDate = this.isoDateFormat.format(Files.getLastModifiedTime(pathItem).toMillis());
-                            String filePath = pathItem.toString().replace(bucketPath.toString(), "").replace(bucketPath.getFileSystem().getSeparator(), "/").replaceAll("^/", "");
+                            String filePath = pathItemRelativePath.replace(bucketPath.getFileSystem().getSeparator(), "/").replaceAll("^/", "");
                             xml.append(FILE_XML.replaceAll(FILE_PATH, filePath).replaceAll(FILE_SIZE, "" + fileSize).replaceAll(FILE_DATE, fileDate));
                         }
                     }
